# autodl-sdk

./: README.md  pyproject.toml  requirements.txt
autodl/: __init__.py  client.py  instance.py  ssh.py  utils.py
examples/: 01_list_instances.py  02_power_on_off.py  03_release.py  04_create_base_image.py  05_create_community_image.py  06_create_my_image.py  07_upload_and_run.py
