[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autodl-sdk"
version = "1.0.0"
description = "AutoDL GPU 云平台 Python 自动化 SDK —— 实例管理、SSH 操作一行搞定"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["autodl", "gpu", "cloud", "automation", "ssh"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "paramiko>=3.0",
]

[project.urls]
Homepage   = "https://github.com/your-username/autodl-sdk"
Issues     = "https://github.com/your-username/autodl-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autodl*"]
